deploy/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-term-svc
spec:
  selector:
    app: ms-term
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8081
  type: ClusterIP
